Nettoyage des API de Reviews (repos, service, controller) pour ne garder que les methodes ou fonctions nécéssaire