@@ -14,7 +14,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.security.Principal;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/reviews")
@@ -22,10 +21,8 @@ public class ReviewApiController {
 
     @Autowired
     private ReviewService reviewService;
-
     @Autowired
-    private UserRepos userRepository; // Ton repo User
-
+    private UserRepos userRepository;
     @Autowired
     private ShowRepos showRepository;
 
@@ -33,27 +30,29 @@ public class ReviewApiController {
     public List<ReviewDTO> getByShow(@PathVariable Long showId) {
         return reviewService.getValidatedReviewsByShow(showId).stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @PostMapping
-    @PreAuthorize("isAuthenticated()") // Obligatoire d'être connecté
+    @PreAuthorize("isAuthenticated()")
     public ResponseEntity<?> create(@RequestBody ReviewDTO dto, Principal principal) {
-        // 1. Récupérer l'utilisateur connecté via son login (Principal)
         User user = userRepository.findByLogin(principal.getName());
-        Show show = showRepository.findById(dto.getShowId()).orElseThrow();
+        Show show = showRepository.findById(dto.getShowId())
+                .orElseThrow(() -> new RuntimeException("Spectacle non trouvé"));
 
-        // 2. Créer l'entité
         Review review = Review.builder()
                 .user(user)
                 .show(show)
                 .comment(dto.getComment())
                 .stars(dto.getStars())
-                .validated(true)
                 .build();
 
-        Review saved = reviewService.addReview(review);
-        return ResponseEntity.ok(convertToDTO(saved));
+        try {
+            Review saved = reviewService.addReview(review);
+            return ResponseEntity.ok(convertToDTO(saved));
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        }
     }
 
     private ReviewDTO convertToDTO(Review r) {
@@ -63,7 +62,7 @@ public class ReviewApiController {
                 .comment(r.getComment())
                 .stars(r.getStars())
                 .createdAt(r.getCreatedAt())
-                .showId(r.getShow().getId()) // Ajoute ce champ dans ton ReviewDTO
+                .showId(r.getShow().getId())
                 .build();
     }
 }
